--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8085
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/affiliate_web
+spring.datasource.username=root
+spring.datasource.password=Kin01688476069
+
+
+spring.jpa.hibernate.ddl-auto=none
