--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3308/affiliate_web
 spring.datasource.username=root
 spring.datasource.password=Kin01688476069
 
+spring.datasource.hikari.data-source-properties.useUnicode=true
+spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 
 spring.jpa.hibernate.ddl-auto=none
