--- a/src/main/resources/fontend/webapp/package.json
+++ b/src/main/resources/fontend/webapp/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "@tinymce/tinymce-react": "^3.8.4",
     "axios": "^0.21.1",
+    "interweave": "^12.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
