--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 server.port=8085
 
-
+#MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3308/affiliate_web
 spring.datasource.username=root
 spring.datasource.password=Kin01688476069
 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+
+#UTF-8
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.hibernate.ddl-auto=update
+#App properties
+# App Properties
+khaithu.app.jwtSecret= khaithumc
+khaithu.app.jwtExpirationMs= 86400000
+
 
